--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+hello:
+  path: /
+  controller: App\Controller\HelloController
+users:
+  path: /users
+  controller: App\Controller\UsersController
